# shamir

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  PR_JUSTIFICATION.md  README.md  SECURITY.md  THREAT_MODEL.md  encoding.go  encoding_test.go  pyproject.toml  shamir.go  shamir_test.go
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
cli/: shamir.py  verify.go
cmd/shamir/: main.go
core/: params.go  polynomial.go  share.go
docs/: API_CONTRACT.md  NON_GOALS.md  VERSIONING_POLICY.md  operational_flow.md  share-format.md  threat-model.md
gf256/: field.go  field_test.go
go/shareformat/: crc.go  decode.go  encode.go
math/: field.go  interpolate.go
operations/: context.py  errors.py  lifecycle.py  verify.py
shamir/: core.py  encoding.py  errors.py  exceptions.py  format.py  integrity.py
tests/: test_cli.py  test_combine.py  test_encoding.py  test_format.py  test_integrity.py  test_shamir.py  test_split.py  vectors.json  verify_test.go
tests/vectors/: README.md  encoding_v1.json  split_k2_n3.json  split_k3_n5.json
verify/: checks.go  errors.go  report.go  verify.go
